# auto-infer

./: .gitignore  README.md  install.sh  pyproject.toml
auto_infer/: __init__.py  errors.py  executor_backends.py  forward_context.py  graph_tasks.py  platform.py
benchmarks/: __init__.py  common.py  compare_results.py  comparison_manifest.json  moonlight_manifest.json  profile_qwen3.py  qwen3_async_manifest.json  qwen3_profile_common.py  run_auto_infer.py  run_serving_frontend.py  run_serving_online.py  run_vllm.py  serving_common.py  sse_client.py
docs/: AGENT-HARNESS-AND-MODEL-ADAPTATION.md  ARCHITECTURE-COMPARISON.md  ARCHITECTURE-CONVERGENCE-PLAN-2026-07-21.md  ARCHITECTURE-CONVERGENCE-VALIDATION-2026-07-21.md  AUTO-INFER-ARCHITECTURE-AND-PERFORMANCE-REPORT.html  AUTO-INFER-ARCHITECTURE-AND-PERFORMANCE-REPORT.md  DECODE-PERFORMANCE-VALIDATION-2026-07-19.md  FINAL-ARCHITECTURE-VALIDATION-2026-07-20.md  HARNESS-NPU-VALIDATION-2026-07-24.md  MTP-MOONLIGHT-VALIDATION-2026-07-20.md  MULTI-STEP-MTP-VALIDATION-2026-07-20.md  NATIVE-ASYNC-SERVING-VALIDATION-2026-07-20.md  NPU-ENV.md  PERFORMANCE-EP-DISPATCH.md  PERFORMANCE-REPORT-2026-07-20.md  PHASE1-VALIDATION-2026-07-19.md  PRODUCTION-STABILITY-AND-ACCURACY-VALIDATION.md  QWEN25-72B-TP8-THREE-FRAMEWORK-COMPARISON-2026-07-24.md  SPEC-ALIGNMENT.md  TP-SERVING-VALIDATION-2026-07-24.md  VLLM-FIRST-VALIDATION-2026-07-20.md  ZERO-HOST-BUBBLE-ASYNC-VALIDATION-2026-07-23.md
figures/: qwen3-profile-phase-sequence.md  qwen3-profile-phase-sequence.mmd  qwen3-three-framework-architecture.md  qwen3-three-framework-architecture.mmd  (+2 more)
(+350 files in other folders)
